[gd_scene load_steps=17 format=3 uid="uid://cbb0tb4tuu5oc"]

[ext_resource type="Texture2D" uid="uid://dakintnym36qk" path="res://assets/level_select/levelseclectBG.png" id="1_n7xxe"]
[ext_resource type="Script" path="res://scenes/common/level_select/level_select_background.gd" id="2_4i2tq"]
[ext_resource type="Texture2D" uid="uid://b5ut8nflgd2ai" path="res://assets/level_select/buttons/1.png" id="3_mnw2u"]
[ext_resource type="Texture2D" uid="uid://bjsm6nk10ct2i" path="res://assets/level_select/buttons/2.png" id="4_mjtoo"]
[ext_resource type="Texture2D" uid="uid://c06ea4tjf1yfa" path="res://assets/level_select/buttons/3.png" id="5_j3fki"]
[ext_resource type="Texture2D" uid="uid://3na62m7bpflv" path="res://assets/level_select/buttons/4.png" id="6_hxvc6"]
[ext_resource type="Texture2D" uid="uid://bmd6oja36hhth" path="res://assets/level_select/buttons/seclectlew.png" id="8_a1wnf"]
[ext_resource type="Theme" uid="uid://df3rrd7p3483n" path="res://assets/themes/mush_theme.tres" id="8_asfqc"]

[sub_resource type="InputEventKey" id="InputEventKey_4xjo2"]
device = -1
pressed = true
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_kl2in"]
events = [SubResource("InputEventKey_4xjo2")]

[sub_resource type="InputEventKey" id="InputEventKey_ydakl"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_ky4vv"]
events = [SubResource("InputEventKey_ydakl")]

[sub_resource type="InputEventKey" id="InputEventKey_nrlsb"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_5ain7"]
events = [SubResource("InputEventKey_nrlsb")]

[sub_resource type="InputEventKey" id="InputEventKey_vtds7"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_l2cs3"]
events = [SubResource("InputEventKey_vtds7")]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSelectBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n7xxe")
expand_mode = 3
stretch_mode = 6
script = ExtResource("2_4i2tq")

[node name="Level1Button" type="TextureButton" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -80.0
offset_right = -2.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_kl2in")
texture_normal = ExtResource("3_mnw2u")
ignore_texture_size = true
stretch_mode = 3

[node name="Level2Button" type="TextureButton" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -80.0
offset_right = 140.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_ky4vv")
texture_normal = ExtResource("4_mjtoo")
ignore_texture_size = true
stretch_mode = 3

[node name="Level3Button" type="TextureButton" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 113.0
offset_right = -2.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_5ain7")
texture_normal = ExtResource("5_j3fki")
ignore_texture_size = true
stretch_mode = 3

[node name="Level4Button" type="TextureButton" parent="LevelSelectBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 113.0
offset_right = 140.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_l2cs3")
texture_normal = ExtResource("6_hxvc6")
ignore_texture_size = true
stretch_mode = 3

[node name="SelectLevelText" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0972222
anchor_right = 1.0
anchor_bottom = 0.0972222
offset_bottom = 216.0
grow_horizontal = 2
texture = ExtResource("8_a1wnf")
expand_mode = 2
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 15.0
offset_right = 48.0
offset_bottom = 46.0
grow_horizontal = 2
theme = ExtResource("8_asfqc")
text = "Main Menu"

[connection signal="pressed" from="LevelSelectBackground/Level1Button" to="LevelSelectBackground" method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LevelSelectBackground/Level2Button" to="LevelSelectBackground" method="_on_level_2_button_pressed"]
[connection signal="pressed" from="LevelSelectBackground/Level3Button" to="LevelSelectBackground" method="_on_level_3_button_pressed"]
[connection signal="pressed" from="LevelSelectBackground/Level4Button" to="LevelSelectBackground" method="_on_level_4_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="LevelSelectBackground" method="_on_main_menu_button_pressed"]
